[gd_scene load_steps=9 format=3 uid="uid://l8gcq31tc5w4"]

[ext_resource type="Script" path="res://scripts/SpaceScene.gd" id="1_hkmim"]
[ext_resource type="PackedScene" uid="uid://bvpqadsar27g" path="res://scenes/player.tscn" id="3_e5r1o"]
[ext_resource type="Texture2D" uid="uid://dd6ja0tv6vuq5" path="res://sprites/backgrounds/ExK_q-IVcAUM7Qu.png" id="4_c4g6x"]

[sub_resource type="Curve2D" id="Curve2D_w4qty"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -809, -671, 0, 0, 0, 0, 1801, -665, 0, 0, 0, 0, 1808, 1199, 0, 0, 0, 0, -816, 1199, 0, 0, 0, 0, -816, 1199, 0, 0, 0, 0, -809, -671)
}
point_count = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_723mx"]
size = Vector2(2521, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uuhs"]
size = Vector2(50.3125, 1855)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpsx0"]
size = Vector2(67, 1860)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgwsp"]
size = Vector2(2525.88, 39.5)

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(320, -270)
script = ExtResource("1_hkmim")
metadata/_edit_horizontal_guides_ = [-289.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(737, 1084)
scale = Vector2(2.7125, 3.40741)
texture = ExtResource("4_c4g6x")

[node name="Player" parent="." instance=ExtResource("3_e5r1o")]
position = Vector2(655, 1012)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-420, -178)
curve = SubResource("Curve2D_w4qty")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-809, -671)
rotation = 0.00229885

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -174.0
offset_top = -114.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.886275, 0, 0, 0.517647)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -55.0
offset_right = 288.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Game Over"

[node name="StartOver" type="Button" parent="GameOver"]
unique_name_in_owner = true
offset_left = 636.0
offset_top = 606.0
offset_right = 1270.0
offset_bottom = 736.0
theme_override_font_sizes/font_size = 50
text = "START OVER!!!"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -13.0
offset_top = 6.0
offset_right = 27.0
offset_bottom = 46.0

[node name="StaticBody2D - Border" type="StaticBody2D" parent="."]
position = Vector2(128, 161)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D - Border"]
position = Vector2(637, 54)
shape = SubResource("RectangleShape2D_723mx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D - Border"]
position = Vector2(-657.156, 941.5)
shape = SubResource("RectangleShape2D_5uuhs")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D - Border"]
position = Vector2(1874.5, 944)
shape = SubResource("RectangleShape2D_vpsx0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D - Border"]
position = Vector2(573.938, 1850)
shape = SubResource("RectangleShape2D_fgwsp")

[connection signal="killed" from="Player" to="." method="_on_player_killed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOver/StartOver" to="." method="_on_start_o_ver_pressed"]
[connection signal="pressed" from="GameOver/StartOver" to="." method="_on_start_over_pressed"]
